--- a/package.json
+++ b/package.json
@@ -1,42 +1,53 @@
 {
   "name": "svgish",
-  "version": "0.0.1",
-  "description": "Operate svgo from ui",
-  "main": "main.js",
+  "version": "0.6.1",
+  "description": "Operate svgo from GUI",
+  "main": "main/main.ts",
   "author": "highhi",
   "license": "MIT",
   "scripts": {
-    "start": "electron .",
-    "watch:js": "webpack -w"
-  },
-  "dependencies": {
-    "bytes": "^3.0.0",
-    "classnames": "^2.2.5",
-    "fs-extra": "^5.0.0",
-    "linkstate": "^1.1.1",
-    "mobx": "^4.1.1",
-    "mobx-preact": "^2.0.0",
-    "preact": "^8.2.7",
-    "svgo": "^1.0.5",
-    "trash": "^4.3.0"
+    "build:rend": "cross-env NODE_ENV=development webpack --config ./webpack.renderer.config.js -w",
+    "build:main": "tsc -p ./tsconfig.main.json -w",
+    "build:css": "postcss ./src/stylesheets/style.css -d ./dist/stylesheets",
+    "lint": "tslint 'src/**/*.ts?(x)'",
+    "lint:fix": "npm run lint -- --fix",
+    "up": "electron ./dist/main/main.js"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-preact": "^1.1.0",
-    "babel-preset-stage-1": "^6.24.1",
+    "@types/bytes": "^3.0.0",
+    "@types/fs-extra": "^5.0.2",
+    "@types/jest": "^22.2.3",
+    "@types/node": "^9.6.6",
+    "@types/react": "^16.3.12",
+    "@types/react-dom": "^16.0.5",
+    "@types/recompose": "^0.26.0",
+    "@types/svgo": "^1.0.0",
+    "@types/trash": "^4.3.0",
+    "awesome-typescript-loader": "^5.0.0",
     "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^0.28.11",
-    "electron": "^1.8.4",
-    "electron-reloader": "^0.2.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "html-webpack-plugin": "^3.1.0",
-    "style-loader": "^0.20.3",
-    "webpack": "3.10.0"
+    "cross-env": "^5.1.4",
+    "electron": "1.8.4",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^22.4.3",
+    "prettier": "^1.12.1",
+    "tslint": "^5.9.1",
+    "tslint-config-prettier": "^1.12.0",
+    "tslint-plugin-prettier": "^1.3.0",
+    "tslint-react": "^3.5.1",
+    "typescript": "^2.8.3",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15"
+  },
+  "dependencies": {
+    "@highhi/electron-json-storage-promise": "^1.0.2",
+    "@highhi/ifn": "^0.0.2",
+    "bytes": "^3.0.0",
+    "fs-extra": "^5.0.0",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "recompose": "^0.27.0",
+    "styled-components": "^3.2.6",
+    "svgo": "^1.0.5",
+    "trash": "^4.3.0"
   }
 }
